--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "mqtt": "^5.5.3",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
-    "typeorm": "0.3.16",
+    "typeorm": "^0.3.20",
     "winston": "^3.13.0"
   }
 }
