score conntected to pub/sub & redefined models to actual models

--- a/frontend/dig-kick-fe/nx.json
+++ b/frontend/dig-kick-fe/nx.json
@@ -63,6 +63,9 @@
       "linter": "eslint",
       "style": "scss",
       "unitTestRunner": "jest"
+    },
+    "@nx/angular:component": {
+      "style": "css"
     }
   },
   "defaultProject": "dig-kick-fe"
