adjusted: project.json with file replacements for envs

--- a/frontend/dig-kick-fe/project.json
+++ b/frontend/dig-kick-fe/project.json
@@ -22,6 +22,10 @@
       },
       "configurations": {
         "production": {
+          "fileReplacements": [{
+            "replace": "src/environments/environment.ts",
+            "with": "src/environments/environment.prod.ts"
+          }],
           "budgets": [
             {
               "type": "initial",
@@ -39,7 +43,11 @@
         "development": {
           "optimization": false,
           "extractLicenses": false,
-          "sourceMap": true
+          "sourceMap": true,
+          "fileReplacements": [{
+            "replace": "src/environments/environment.ts",
+            "with": "src/environments/environment.dev.ts"
+          }]
         }
       },
       "defaultConfiguration": "production"
