--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
@@ -10,8 +8,14 @@ services:
     image: emqx/emqx:latest
     ports:
       - "1883:1883"
+      - "1884:1884"
       - "8083:8083"
       - "8084:8084"
       - "8883:8883"
       - "18083:18083"
+
+  digkick:
+    build: ./frontend/dig-kick-fe
+    ports:
+      - "80:80"
 
