--- a/dick/platformio.ini
+++ b/dick/platformio.ini
@@ -31,15 +31,48 @@ build_src_filter =
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.12.0
 
-[env:main]
+[env:mqttTest]
 platform = espressif32
 board = node32s
 framework = arduino
 build_src_filter = 
-	+<main.cpp>
+	+<mqttTest.cpp>
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.0.4
+
+[env:displayTest]
+platform = espressif32
+board = node32s
+framework = arduino
+build_src_filter = 
+	+<displayLayoutTest.cpp>
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.9
 	adafruit/Adafruit GFX Library@^1.11.9
 	Adafruit SH110X @ 2.1.10+sha.7a0a5ee
 	adafruit/Adafruit BusIO @ ^1.15.0
 	SPI
+
+[env:nfc]
+platform = espressif32
+board = node32s
+framework = arduino
+build_src_filter = 
+	+<nfc.cpp>
+lib_deps =
+	SPI
+	miguelbalboa/MFRC522 @ ^1.4.11
+
+[env:main]
+platform = espressif32
+board = node32s
+framework = arduino
+build_src_filter = 
+	+<main.cpp>
+lib_deps =
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.0.4
+	adafruit/Adafruit NeoPixel@^1.12.0
+	SPI
+	miguelbalboa/MFRC522 @ ^1.4.11	
