--- a/.github/workflows/bunTests.yml
+++ b/.github/workflows/bunTests.yml
@@ -8,7 +8,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
 
-      - run: cd ./backend
+      - run: |
+          cd backend
       - run: bun install
       - run: bun index.ts
       - run: bun run build
