--- a/.github/workflows/bunTests.yml
+++ b/.github/workflows/bunTests.yml
@@ -8,8 +8,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
 
+      - run: ls
       - run: |
           cd backend
+      - run: ls
       - run: bun install
       - run: bun index.ts
       - run: bun run build
