--- a/.github/workflows/bunTests.yml
+++ b/.github/workflows/bunTests.yml
@@ -11,7 +11,10 @@ jobs:
       - run: ls
       - run: |
           cd backend
-      - run: ls
-      - run: bun install
-      - run: bun index.ts
-      - run: bun run build
+          bun install
+      - run: |
+          cd backend
+          bun run build
+      - run: |
+          cd backend
+          bun test
