--- a/.github/workflows/bunTests.yml
+++ b/.github/workflows/bunTests.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.1.12
 
       - run: ls
       - run: |
