added: build to step

--- a/.github/workflows/bunTests.yml
+++ b/.github/workflows/bunTests.yml
@@ -14,4 +14,5 @@ jobs:
       - run: |
           cd backend
           bun install
+          bun build --target=bun ./src/app.ts
           bun test
