--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@dig-kick/backend",
   "version": "1.0.0",
   "description": "Digital Kicker Backend",
   "main": "src/app.ts",
