--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,8 +9,8 @@ tmp
 node_modules
 
 # IDEs and editors
-/.idea
-.project
+.idea/
+!.idea/workspace.xml
 .classpath
 .c9/
 *.launch
@@ -38,5 +38,5 @@ testem.log
 .DS_Store
 Thumbs.db
 
-.nx/cache
+.nx/**
 .angular
