--- a/frontend/e2e/project.json
+++ b/frontend/e2e/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "e2e",
+  "name": "dig-kick-frontend-e2e",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "e2e/src",
-  "implicitDependencies": ["dig-kick-fe"],
+  "implicitDependencies": ["dig-kick-frontend"],
   "// targets": "to see all targets run: nx show project e2e --web",
   "targets": {}
 }
