--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "author": "Marvin Voss, Maximilian Koenig",
   "license": "ISC",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "bun-types": "^1.1.20"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
