added bun types to tsconfig

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "types": [
+    "bun-types" // add Bun global
+  ],  
   "compilerOptions": {
     // Enable latest features
     "lib": ["ESNext", "DOM"],
