--- a/.github/workflows/bunTests.yml
+++ b/.github/workflows/bunTests.yml
@@ -10,9 +10,14 @@ jobs:
         with:
           bun-version: 1.1.12
 
-      - run: ls
+      
+      # run any `bun` or `bunx` command
       - run: |
-          cd backend
+          cd ./backend
           bun install
-          bun build --target=bun ./src/app.ts
-          bun test
+      - run: |
+          cd ./backend
+          bun ./src/app.ts
+      - run: |
+          cd ./backend
+          bun run build
