--- a/.github/workflows/bunActions.yml
+++ b/.github/workflows/bunActions.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.1.12
+      - uses: actions/setup-sqlite@v1
       - name: Install packages via bun
         run: |
           cd ./backend
