--- a/.github/workflows/bunActions.yml
+++ b/.github/workflows/bunActions.yml
@@ -26,7 +26,9 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.1.12
-      - uses: actions/setup-sqlite@v1
+      - name: Setup SQLite environment
+        uses: ccorsi/setup-sqlite@v1.0.1
+      
       - name: Install packages via bun
         run: |
           cd ./backend
