--- a/.github/workflows/bunActions.yml
+++ b/.github/workflows/bunActions.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Run tests with bun
         run: |
           cd ./backend
-          bun test
+          bun test --target=bun
