--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -2,7 +2,8 @@ name: AsyncAPI documents processing
 
 on:
   push:
-    branches: [ "develop", "main", "**pages**" ]
+    branches: [ "develop", "main", "**pages**", "9-update-gitlab-cli-to-github-action-pages" ]
+
 
 jobs:
   generate:
