--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -11,7 +11,18 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: asyncapi-github-action
-        uses: WaleedAshraf/asyncapi-github-action@v0.0.10
+      - name: Generating HTML from my AsyncAPI document
+        uses: asyncapi/github-action-for-cli@v3.1.1 # You can use any version you want
         with:
-          filepath: 'backend/asyncapi.yaml'
+          command: generate
+          filepath: ./backend/asyncapi.yaml
+          template: "@asyncapi/html-template@0.9.0" #In case of template from npm. Or can use a link.
+          output: ./generated-html
+          parameters: "-p baseHref=/test-experiment/ sidebarOrganization=byTags"
+
+      - name: Deploy GH page
+        uses: JamesIves/github-pages-deploy-action
+        with:
+          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: generated-html
