--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Generating HTML from my AsyncAPI document
-        uses: asyncapi/github-action-for-cli@v3.1.1 # You can use any version you want
+      - name: Generator, Validator, Converter and others - all in one for your AsyncAPI docs
+        uses: asyncapi/github-action-for-cli@v3.0.0
         with:
           command: generate
           filepath: ./backend/asyncapi.yaml
