--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -13,3 +13,9 @@ jobs:
 
       - name: Generator, Validator, Converter and others - all in one for your AsyncAPI docs
         uses: asyncapi/github-action-for-cli@v3.0.0
+        with:
+          command: generate
+          filepath: ./backend/asyncapi.yaml
+          template: "@asyncapi/html-template@0.9.0" #In case of template from npm. Or can use a link.
+          output: ./generated-html
+          parameters: "-p baseHref=/test-experiment/ sidebarOrganization=byTags"
