--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ "develop", "main", "**pages**", "9-update-gitlab-cli-to-github-action-pages" ]
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
