--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -19,6 +19,7 @@ concurrency:
 jobs:
   generate:
     environment:
+      name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
