--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,7 @@
   "author": "Marvin Voss, Maximilian Koenig",
   "license": "ISC",
   "devDependencies": {
-    "@types/bun": "latest",
-    "bun-types": "^1.1.20"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
