--- a/.github/workflows/asyncApi.yml
+++ b/.github/workflows/asyncApi.yml
@@ -2,7 +2,7 @@ name: AsyncAPI documents processing
 
 on:
   push:
-    branches: [ "develop", "main", "**pages**", "9-update-gitlab-cli-to-github-action-pages" ]
+    branches: ["main"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -40,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './asyncapi-generated-html'
+          path: "./asyncapi-generated-html"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
