--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "lint": "nx run-many -t lint",
+    "test": "nx run-many -t test",
+    "prettier:check": "prettier -c .",
+    "prettier:write": "prettier -w ."
   },
   "private": true,
   "dependencies": {
