--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,42 +1,7 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-dist
-tmp
-/out-tsc
-
-# dependencies
-node_modules
-
-# IDEs and editors
-.idea/
-!.idea/workspace.xml
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
+dist/
+tmp/
+node_modules/
 .DS_Store
 Thumbs.db
-
-.nx/**
-.angular
+.nx/
+.angular/
