--- a/.github/workflows/pr-frontend.yml
+++ b/.github/workflows/pr-frontend.yml
@@ -12,14 +12,11 @@ jobs:
         working-directory: ./frontend
     steps:
       - uses: actions/checkout@v4
-      - name: List Files and Folders
-        run: |
-          pwd
-          ls -lsah
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: "./frontend/package-lock.json"
       - run: npm ci
       - name: Check formatting
         run: |
