--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,46 +12,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.3.0",
-    "@angular/common": "~17.3.0",
-    "@angular/compiler": "~17.3.0",
-    "@angular/core": "~17.3.0",
-    "@angular/forms": "~17.3.0",
-    "@angular/platform-browser": "~17.3.0",
-    "@angular/platform-browser-dynamic": "~17.3.0",
-    "@angular/router": "~17.3.0",
-    "@nx/angular": "18.2.4",
+    "@angular/animations": "18.1.1",
+    "@angular/common": "18.1.1",
+    "@angular/compiler": "18.1.1",
+    "@angular/core": "18.1.1",
+    "@angular/forms": "18.1.1",
+    "@angular/platform-browser": "18.1.1",
+    "@angular/platform-browser-dynamic": "18.1.1",
+    "@angular/router": "18.1.1",
+    "@nx/angular": "19.5.2",
     "ngx-mqtt": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.3.0",
-    "@angular-devkit/core": "~17.3.0",
-    "@angular-devkit/schematics": "~17.3.0",
-    "@angular-eslint/eslint-plugin": "~17.3.0",
-    "@angular-eslint/eslint-plugin-template": "~17.3.0",
-    "@angular-eslint/template-parser": "~17.3.0",
-    "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "~17.3.0",
-    "@angular/language-service": "~17.3.0",
-    "@nx/devkit": "18.2.4",
-    "@nx/eslint": "18.2.4",
-    "@nx/eslint-plugin": "18.2.4",
-    "@nx/jest": "18.2.4",
-    "@nx/js": "18.2.4",
-    "@nx/playwright": "18.2.4",
-    "@nx/workspace": "18.2.4",
+    "@angular-devkit/build-angular": "18.1.1",
+    "@angular-devkit/core": "18.1.1",
+    "@angular-devkit/schematics": "18.1.1",
+    "@angular-eslint/eslint-plugin": "18.1.0",
+    "@angular-eslint/eslint-plugin-template": "18.1.0",
+    "@angular-eslint/template-parser": "18.1.0",
+    "@angular/cli": "~18.1.1",
+    "@angular/compiler-cli": "18.1.1",
+    "@angular/language-service": "18.1.1",
+    "@nx/devkit": "19.5.2",
+    "@nx/eslint": "19.5.2",
+    "@nx/eslint-plugin": "19.5.2",
+    "@nx/jest": "19.5.2",
+    "@nx/js": "19.5.2",
+    "@nx/playwright": "19.5.2",
+    "@nx/workspace": "19.5.2",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~17.3.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@schematics/angular": "18.1.1",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.12",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
+    "@typescript-eslint/eslint-plugin": "7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
     "autoprefixer": "^10.4.0",
     "daisyui": "^4.10.2",
     "eslint": "~8.57.0",
@@ -59,14 +59,14 @@
     "eslint-plugin-playwright": "^0.15.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~14.0.3",
-    "nx": "18.2.4",
+    "jest-preset-angular": "14.1.1",
+    "nx": "19.5.2",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "5.5.4"
   },
   "nx": {
     "includedScripts": []
