--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "@angular-eslint/eslint-plugin": "18.1.0",
     "@angular-eslint/eslint-plugin-template": "18.1.0",
     "@angular-eslint/template-parser": "18.1.0",
-    "@angular/cli": "~18.1.1",
+    "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "18.1.1",
     "@angular/language-service": "18.1.1",
     "@nx/devkit": "19.5.2",
@@ -52,6 +52,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
+    "@typescript-eslint/utils": "^7.16.0",
     "autoprefixer": "^10.4.0",
     "daisyui": "^4.10.2",
     "eslint": "~8.57.0",
