Update frontend Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,8 @@
-FROM alpine as builder
-RUN apk add npm g++ make py3-pip
+FROM node:20-alpine as builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
-RUN ls -lsha
 RUN npm run build
 
 FROM caddy
