--- a/frontend/nx.json
+++ b/frontend/nx.json
@@ -26,6 +26,7 @@
         "default",
         "{workspaceRoot}/.eslintrc.json",
         "{workspaceRoot}/.eslintignore",
+        "{workspaceRoot}/.eslintrc.base.json",
         "{workspaceRoot}/eslint.config.js"
       ]
     },
