--- a/frontend/tsconfig.base.json
+++ b/frontend/tsconfig.base.json
@@ -13,6 +13,7 @@
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "useDefineForClassFields": false,
     "baseUrl": ".",
     "paths": {
       "@dig-kick/game": ["libs/game/src/index.ts"],
