--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "ngx-mqtt": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "zod": "^3.23.8",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
