--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "typeorm": "^0.3.20",
     "unique-username-generator": "^1.3.0",
     "winston": "^3.13.0",
-    "yaml": "^2.5.0"
+    "yaml": "^2.5.0",
+    "zod": "^3.23.8"
   }
 }
