--- a/.github/workflows/pr-backend.yml
+++ b/.github/workflows/pr-backend.yml
@@ -12,12 +12,10 @@ jobs:
         working-directory: ./backend
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: 20
-          cache: "npm"
-          cache-dependency-path: "./backend/package-lock.json"
-      - run: npm ci
+          bun-version: 1.1.12
+      - name: Bun install
+        run: bun install -p --frozen-lockfile
       - name: Check formatting
-        run: |
-          npm run prettier:check
+        run: bun run prettier:check
