--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,17 +1,24 @@
 services:
-  backend:
+  kicker-backend:
     build: ../backend
-    container_name: backend
+    container_name: kicker-backend
     restart: unless-stopped
     volumes:
       - ./config/backend:/home/bun/app/resources
       - ./data/backend:/data
 
-  digkick:
+  kicker-frontend:
     build: ../frontend
-    container_name: frontend
+    container_name: kicker-frontend
     restart: unless-stopped
+    networks:
+      - traefik
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.kicker.rule: Host("kicker.local.hiqs.de")
     volumes:
       - ./config/frontend/config.json:/srv/assets/config.json
-    ports:
-      - "80:80"
+
+networks:
+  traefik:
+    external: true
