--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -3,6 +3,8 @@ services:
     build: ../backend
     container_name: kicker-backend
     restart: unless-stopped
+    networks:
+      - emqx
     volumes:
       - ./config/backend:/home/bun/app/resources
       - ./data/backend:/data
@@ -11,8 +13,8 @@ services:
     build: ../frontend
     container_name: kicker-frontend
     restart: unless-stopped
-    networks:
-      - traefik
+    ports:
+      - 80:80
     labels:
       traefik.enable: "true"
       traefik.http.routers.kicker.rule: Host("kicker.local.hiqs.de")
@@ -20,5 +22,5 @@ services:
       - ./config/frontend/config.json:/srv/assets/config.json
 
 networks:
-  traefik:
+  emqx:
     external: true
