Use bun install -p --frozen-lockfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM oven/bun:latest
 COPY package.json ./
 COPY bun.lockb ./
 
-RUN bun install
+RUN bun install -p --frozen-lockfile
 
 COPY src ./
 COPY tsconfig.json ./
