--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,11 @@ FROM oven/bun:latest
 
 COPY package.json ./
 COPY bun.lockb ./
+
+RUN bun install -p --frozen-lockfile
+
 COPY src ./
 COPY tsconfig.json ./
 
-RUN bun install
+
 ENTRYPOINT [ "bun", "run", "app.ts" ]
