--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "18.1.1",
     "@angular/platform-browser-dynamic": "18.1.1",
     "@angular/router": "18.1.1",
+    "@ngrx/signals": "^18.0.2",
     "@nx/angular": "19.5.2",
     "ngx-mqtt": "^17.0.0",
     "ngxtension": "^4.0.0",
