--- a/.github/workflows/pr-frontend.yml
+++ b/.github/workflows/pr-frontend.yml
@@ -21,3 +21,6 @@ jobs:
       - name: Check formatting
         run: |
           npm run prettier:check
+      - name: Check linting
+        run: |
+          npm run lint
