--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -1,9 +1,9 @@
 {
+  "debug": true,
   "broker": {
     "hostname": "localhost",
     "port": 8083,
     "path": "/mqtt",
-    "clientId": "frontend",
     "protocol": "ws"
   }
 }
